[package]
name = "va108xx"
version = "0.1.0"
edition = "2018"
description = "Peripheral access API for Vorago VA108XX microcontrollers"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/robamu-org/va108xx-rs"
repository = "https://github.com/robamu-org/va108xx-rs"
keywords = ["no-std", "arm", "cortex-m", "vorago", "va108xx"]
authors = ["Robin Mueller <robin.mueller.m@gmail.com>"]

[dependencies]
cortex-m = "0.7.3"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"

[features]
rt = ["cortex-m-rt/device"]
